--- a/issues/templates/issues/base.html
+++ b/issues/templates/issues/base.html
@@ -14,6 +14,11 @@
 						(Sentry && Jira)==Integration
 					</a>
 				</h1>
+				<p>
+					<a href="{% url 'issues:issue_about' %}" id="header_title_about" title="Go to about page">
+						About
+					</a>
+				</p>
 			</div>
 			<div class="header_icon">
 				<a href="https://www.zyfra.com/" target="_blank">
